[tool.poetry]
name = "coeval"
version = "0.1.0"
description = "Get the current times across a few timezones"
authors = ["Tucker Beck <tucker.beck@gmail.com>"]
license = "MIT"
packages = [ { include = "app" } ]

[tool.poetry.dependencies]
python = "^3.8"
pendulum = "^2.1.2"
toml = "^0.10.2"
py-buzz = "^3.2.1"
cattrs = "^22.2.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
pytest-mock = "^3.10.0"
ipython = "^8.5.0"
pytest-cov = "^4.0.0"
black = "^22.10.0"
isort = "^5.10.1"
pyproject-flake8 = "^5.0.4"
mypy = "^0.982"
pytest-random-order = "^1.0.4"


[tool.poetry.scripts]
coeval = "coeval.main:app"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = [
    "--random-order",
    "--cov=jobbergate_cli",
    "--cov-report=term-missing",
    "--cov-fail-under=85",
]

[tool.black]
line-length = 120

[tool.isort]
line_length = 120
lines_after_imports = "2"
profile = "black"
multi_line_output = 3
include_trailing_comma = true

[tool.flake8]
max-line-length = 120
max-complexity = 40

[[tool.mypy.overrides]]
module = []
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
